Fixed #4545 - Mobile: Wrong paddings on design-surface

--- a/packages/survey-creator-core/src/components/page.scss
+++ b/packages/survey-creator-core/src/components/page.scss
@@ -6,10 +6,6 @@ svc-page {
 
 .svc-page {
   margin-top: calcSize(2);
-
-  .sd-page__title {
-    margin: calcSize(2.5) 0 0 0;
-  }
 }
 
 .svc-page__content {
